0.1.8
Back now goes back after jumping to bookmark.
Added Show/Hide docviewer to 'View' menu.
Added runtime check for doxygen.
Added default doxygen config file to "/usr/share/KKEdit/docs"
Added doxygen document builder to 'File' menu.
Stopped loads of pointless javasript warnings on stdout when using the docviewer for certain pages.
Root desktop file now uses the graphical su path defined by configure ( defaults to /usr/bin/gtksu ).
Can now set default path to graphical su at compile time with "--with-gsu-path" option.
Added 'Highlight All' to regex find.
Made 'Highlight All' persistent.
Added 'Highlight All' to search.
'Back' now goes back from selecting in the 'Functions' menu.
'Back' now switches tabs as well.

0.1.7
Redone code for external tools.
Fixed rare segfault in external tools dialog.
Added option to delete keyboard shortcut from external tools and main keyboard shortcuts.
Added option to add keyboard shortcut to external tools.
Fixed status bar lag when opening many large files.
Added 'Read Link...' to prefs to either open a link normally or to read the link first.
Added 'Open' to tab menu to quickly open files in current dirctory.
When moving multiple lines up/down selection is extended to whole lines.
Status bar now doesn't show '(null)' if no syntax highlighting or filepath.
Added more shortcuts.
Update status bar on tab switch.
Added 'Show/Hide Status Bar' to 'View' menu. 
Added status bar.
Added customising  dialog for keyboard shortcuts.
Added keyboard shortcuts.

0.1.6
Updated example tools that need root to use new features.
Now if no GUI for getting root priviliges specified ALL root actions are run in terminal.
Added 'Run Tool As Root' to tool options.
Fixed bug when user terminal command empty.
External Manpage editor program installed now checked at runtime instead of compile time.
Added user command for getting root privileges via a GUI in prefs.
Removed forced use of external app GtkSu for getting root privilege.